add get portal service function
