# pkg/microservice/aslan/core/environment/handler/router.go
@@ -269,8 +269,8 @@ func (*Router) Inject(router *gin.RouterGroup) {
 		environments.POST("/:name/share/enable", EnableBaseEnv)
 		environments.DELETE("/:name/share/enable", DisableBaseEnv)
 		environments.GET("/:name/check/sharenv/:op/ready", CheckShareEnvReady)
-		environments.POST("/:name/share/setupPortal/:serviceName", SetupPortalService)
-		environments.GET("/:name/share/gatewayAddress", GetIstioGatewayAddress)
+		environments.GET("/:name/share/portal/:serviceName", GetPortalService)
+		environments.POST("/:name/share/portal/:serviceName", SetupPortalService)
 
 		environments.GET("/:name/services/:serviceName/pmexec", ConnectSshPmExec)
 
