# pkg/microservice/aslan/core/environment/handler/share_env.go
@@ -162,6 +162,50 @@ func CheckShareEnvReady(c *gin.Context) {
 	ctx.Resp, ctx.Err = service.CheckShareEnvReady(c, envName, c.Param("op"), projectKey)
 }
 
+// @Summary Get Portal Service for Share Env
+// @Description Get Portal Service for Share Env
+// @Tags 	environment
+// @Accept 	json
+// @Produce json
+// @Param 	projectName		query		string									true	"project name"
+// @Param 	name			path		string									true	"env name"
+// @Param 	serviceName		path		string									true	"service name"
+// @Success 200 			{object} 	service.GetPortalServiceResponse
+// @Router /api/aslan/environment/environments/{name}/share/portal/{serviceName} [get]
+func GetPortalService(c *gin.Context) {
+	ctx, err := internalhandler.NewContextWithAuthorization(c)
+	defer func() { internalhandler.JSONResponse(c, ctx) }()
+
+	if err != nil {
+		ctx.Err = fmt.Errorf("authorization Info Generation failed: err %s", err)
+		ctx.UnAuthorized = true
+		return
+	}
+
+	envName := c.Param("name")
+	serviceName := c.Param("serviceName")
+	projectKey := c.Query("projectName")
+
+	// authorization checks
+	if !ctx.Resources.IsSystemAdmin {
+		if _, ok := ctx.Resources.ProjectAuthInfo[projectKey]; !ok {
+			ctx.UnAuthorized = true
+			return
+		}
+		if !ctx.Resources.ProjectAuthInfo[projectKey].IsProjectAdmin &&
+			!ctx.Resources.ProjectAuthInfo[projectKey].Env.EditConfig {
+			permitted, err := internalhandler.GetCollaborationModePermission(ctx.UserID, projectKey, types.ResourceTypeEnvironment, envName, types.EnvActionEditConfig)
+			if err != nil || !permitted {
+				ctx.UnAuthorized = true
+				return
+			}
+		}
+	}
+
+	ctx.Resp, ctx.Err = service.GetPortalService(c, projectKey, envName, serviceName)
+	return
+}
+
 // @Summary Setup Portal Service for Share Env
 // @Description Setup Portal Service for Share Env
 // @Tags 	environment
@@ -172,7 +216,7 @@ func CheckShareEnvReady(c *gin.Context) {
 // @Param 	serviceName		path		string									true	"service name"
 // @Param 	body 			body 		[]service.SetupPortalServiceRequest 	true 	"body"
 // @Success 200
-// @Router /api/aslan/environment/environments/{name}/share/setupPortal/{serviceName} [post]
+// @Router /api/aslan/environment/environments/{name}/share/portal/{serviceName} [post]
 func SetupPortalService(c *gin.Context) {
 	ctx, err := internalhandler.NewContextWithAuthorization(c)
 	defer func() { internalhandler.JSONResponse(c, ctx) }()
@@ -211,47 +255,5 @@ func SetupPortalService(c *gin.Context) {
 	}
 
 	ctx.Err = service.SetupPortalService(c, projectKey, envName, serviceName, req)
-	return
-}
-
-// @Summary Get Istio Gateway Address for Share Env
-// @Description Get Istio Gateway Address for Share Env
-// @Tags 	environment
-// @Accept 	json
-// @Produce json
-// @Param 	projectName		query		string									true	"project name"
-// @Param 	name			path		string									true	"env name"
-// @Success 200 		{object} 	service.GetIstioGatewayAddressResponse
-// @Router /api/aslan/environment/environments/{name}/share/gatewayAddress [get]
-func GetIstioGatewayAddress(c *gin.Context) {
-	ctx, err := internalhandler.NewContextWithAuthorization(c)
-	defer func() { internalhandler.JSONResponse(c, ctx) }()
-
-	if err != nil {
-		ctx.Err = fmt.Errorf("authorization Info Generation failed: err %s", err)
-		ctx.UnAuthorized = true
-		return
-	}
-
-	envName := c.Param("name")
-	projectKey := c.Query("projectName")
-
-	// authorization checks
-	if !ctx.Resources.IsSystemAdmin {
-		if _, ok := ctx.Resources.ProjectAuthInfo[projectKey]; !ok {
-			ctx.UnAuthorized = true
-			return
-		}
-		if !ctx.Resources.ProjectAuthInfo[projectKey].IsProjectAdmin &&
-			!ctx.Resources.ProjectAuthInfo[projectKey].Env.EditConfig {
-			permitted, err := internalhandler.GetCollaborationModePermission(ctx.UserID, projectKey, types.ResourceTypeEnvironment, envName, types.EnvActionEditConfig)
-			if err != nil || !permitted {
-				ctx.UnAuthorized = true
-				return
-			}
-		}
-	}
-
-	ctx.Resp, ctx.Err = service.GetIstioGatewayAddress(c, projectKey, envName)
 	return
 }
